--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -17,6 +17,12 @@ default-features = false
 path = '../pallets/template'
 version = '4.0.0-dev'
 
+[dependencies.pns-registrar]
+default-features = false
+git = 'https://github.com/pnsproject/pns-pallets.git'
+branch = 'monthly'
+
+
 [build-dependencies.substrate-wasm-builder]
 git = 'https://github.com/paritytech/substrate.git'
 tag = 'monthly-2021-11'
@@ -218,6 +224,7 @@ std = [
     'pallet-timestamp/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
     'pallet-transaction-payment/std',
+    'pns-registrar/std',
     'sp-api/std',
     'sp-block-builder/std',
     'sp-consensus-aura/std',
