--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: "3.2"
 services:
   dev:
     container_name: node-template
-    image: paritytech/ci-linux:974ba3ac-20201006
+    image: paritytech/ci-linux:production
     working_dir: /var/www/node-template
     ports:
-      - "9944:9944"
+      - "9944:10086"
     environment:
       - CARGO_HOME=/var/www/node-template/.cargo
     volumes:
