--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,6 @@ services:
     volumes:
       - .:/var/www/node-template
       - type: bind
-        source: ./.local
-        target: /root/.local
+        source: ./
+        target: /root/
     command: bash -c "cargo build --release && ./target/release/node-template --dev --ws-external"
