--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -25,6 +25,12 @@ version = '3.0.0'
 path = '../runtime'
 version = '4.0.0-dev'
 
+[dependencies.rpc-def]
+git = "https://github.com/pnsproject/pns-rpc.git"
+
+[dependencies.rpc-impl]
+git = "https://github.com/pnsproject/pns-rpc.git"
+
 [dependencies]
 jsonrpc-core = '18.0.0'
 structopt = '0.3.8'
