--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     image: paritytech/ci-linux:production
     working_dir: /var/www/node-template
     ports:
-      - "10086:10086"
+      - "10086:9944"
+      - "10087:9933"
     environment:
       - CARGO_HOME=/var/www/node-template/.cargo
     volumes:
@@ -14,4 +15,4 @@ services:
       - type: bind
         source: ./
         target: /root/
-    command: bash -c "cargo build --release && ./target/release/node-template --dev --ws-external --ws-port 10086"
+    command: bash -c "cargo build --release && ./target/release/node-template --dev --ws-external"
