--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
       - type: bind
         source: ./
         target: /root/
-    command: bash -c "cargo build --release && ./target/release/node-template --dev"
+    command: bash -c "cargo build --release && ./target/release/node-template --dev --ws-external --rpc-external"
